<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <android.support.design.widget.TextInputLayout
                android:layout_width="@dimen/indentation_0"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:counterEnabled="true"
                app:counterMaxLength="@integer/max_counter_20"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="@dimen/indentation_10"
                app:boxCornerRadiusBottomStart="@dimen/indentation_10"
                app:boxCornerRadiusTopEnd="@dimen/indentation_10"
                app:boxCornerRadiusTopStart="@dimen/indentation_10"
                app:boxStrokeColor="@color/colorPurple"
                android:hint="@string/txt_enter_name"
                app:helperTextEnabled="true"
                app:helperText="@string/txt_ht_required"
                android:id="@+id/tilMainName">

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/etMainName"

                    android:maxLength="@integer/max_txt_length_20"
                    android:inputType="textCapWords|textPersonName"
            />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="@dimen/indentation_0"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilMainName"
                app:counterEnabled="true"
                app:counterMaxLength="@integer/max_counter_20"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="@dimen/indentation_10"
                app:boxCornerRadiusBottomStart="@dimen/indentation_10"
                app:boxCornerRadiusTopEnd="@dimen/indentation_10"
                app:boxCornerRadiusTopStart="@dimen/indentation_10"
                app:boxStrokeColor="@color/colorPurple"
                android:hint="@string/txt_enter_surname"
                app:helperTextEnabled="true"
                app:helperText="@string/txt_ht_required"
                android:id="@+id/tilMainSurname">

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/etMainSurname"
                    android:maxLength="@integer/max_txt_length_20"
                    android:inputType="textCapWords|textPersonName"
            />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="@dimen/indentation_0"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="@dimen/indentation_10"
                app:boxCornerRadiusBottomStart="@dimen/indentation_10"
                app:boxCornerRadiusTopEnd="@dimen/indentation_10"
                app:boxCornerRadiusTopStart="@dimen/indentation_10"
                app:boxStrokeColor="@color/colorPurple"
                android:hint="@string/txt_enter_age"
                app:layout_constraintTop_toBottomOf="@id/tilMainSurname"
                android:id="@+id/tilMainAge">

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/etMainAge"
                    android:maxLength="@integer/max_txt_length_2"
                    android:inputType="number"
            />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="@dimen/indentation_0"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilMainAge"
                app:counterEnabled="true"
                app:counterMaxLength="@integer/max_counter_100"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="@dimen/indentation_10"
                app:boxCornerRadiusBottomStart="@dimen/indentation_10"
                app:boxCornerRadiusTopEnd="@dimen/indentation_10"
                app:boxCornerRadiusTopStart="@dimen/indentation_10"
                app:boxStrokeColor="@color/colorPurple"
                android:hint="@string/txt_enter_another"
                android:id="@+id/tilMainAnother">

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/etMainAnother"
                    android:maxLength="@integer/max_txt_length_100"
                    android:inputType="textPersonName"
            />
        </android.support.design.widget.TextInputLayout>

        <Button android:layout_width="@dimen/indentation_0"
                android:id="@+id/btnMainSubmit"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilMainAnother"
                android:text="@string/txt_btn_submit"
        />
    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>

